# MendeluProjects

./: wgd_projekt1_monogramy_Nedomová.afdesign
BattleShipGame/: CMakeLists.txt  GameEngine.cpp  GameEngine.h  GameLogic.cpp  GameLogic.h  Loader.cpp  Loader.h  main.cpp
Cpp_Group_Project/: CMakeLists.txt  FightWindow.qml  Inventory.qml  Location.qml  Main.qml  Menu.qml  MenuButton.qml  PlayerStats.qml  Slot.qml  StatsRow.qml  Tile.qml  armor.cpp  armor.h  gameengine.cpp  gameengine.h  gameobject.h  inventory.cpp  inventory.h  location.cpp  location.h  main.cpp  monster.cpp  monster.h  npc.cpp  npc.h  obstacle.cpp  obstacle.h  player.cpp  player.h  potion.cpp  potion.h  quest.cpp  quest.h  weapon.cpp  weapon.h  world.cpp  world.h
projekt_ls2023/: CMakeLists.txt  Enemy.cpp  Enemy.h  Hero.cpp  Hero.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Map.cpp  Map.h  Menu.cpp  Menu.h  World.cpp  World.h  main.cpp
